# CustomShell

./: .gitignore  CMakeLists.txt  Makefile  README.md
headers/: calculator.hpp  cli.hpp  commands.hpp  dictionary.hpp  utils.hpp
source/: CustomShell.cpp  calculator.cpp  cli.cpp  commands.cpp  dictionary.cpp  main.cpp  utils.cpp
